# pass-tee-port

./: .gitignore  .gitmodules  README.md  ecdsa.sec
enclave/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  masterList.pem  register.py  test.py
enclave-signer/: Cargo.toml  Makefile
enclave-signer/src/: main.rs  sign.rs
enclave/scripts/: check_signature.py  send_request.py  test_server.py
enclave/src/: check.rs  main.rs  passport.rs  sign.rs
linked-data-viewer/: bun.lockb  package.json
linked-data-viewer/app/: layout.tsx  page.tsx  providers.tsx
linked-data-viewer/config/: site.ts
linked-data-viewer/contract/: abi.json  contractProvider.tsx
pass-scanner/: PassTeePort.abi  gui.py  main.py  requirements.txt  test.py
pass-scanner/NFCPassportReader/: __init__.py  passport.py  reader.py
pass-scanner/NFCPassportReader/coreNfc/: TKBERTLV.py  adpu.py  bacHandler.py  cardAccess.py  helpers.py  keyGenerator.py  llcrypto.py  paceHandler.py  secureMessageHandler.py  tagReader.py
scripts/: .gitignore  submit_passport_data.py  test.py
smart-contracts/: Makefile  foundry.toml
smart-contracts/broadcast/PassTeePort.s.sol/421614/: run-1742727889.json  run-1742727925.json  run-1742731706.json  run-1742732831.json  run-1742733041.json  (+8 more)
smart-contracts/script/: Counter.s.sol  PassTeePort.s.sol  deployCert.sol
smart-contracts/src/: CertManager.sol  INitroProver.sol  PassTeePort.sol
smart-contracts/src/lib/: Asn1Decode.sol  BytesUtils.sol  DateTimeLibrary.sol
smart-contracts/test/: NitroProver.t.sol  NitroProverHack.t.sol  PassTeePort.t.sol  test_out
